--- a/src/components/style/Modal.css
+++ b/src/components/style/Modal.css
@@ -1,11 +1,10 @@
 
    
 .modal-main {
-    /* width: 100vw; */
-    /* height: 100vh; */
+    
     /* background-color: rgb(0, 0, 0); */
     position: absolute;
-    top: 60vh;
+    top: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
