--- a/src/components/style/Projects.css
+++ b/src/components/style/Projects.css
@@ -11,15 +11,10 @@
 }
 
 
-/* 
-.proj-cards{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-} */
 .proj-container {
     justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
 }
 .proj-card{
     position: relative;
@@ -50,14 +45,14 @@
     width: 100%;
     padding: 0 20px;
     position: absolute;
-    top: -100%;
+    top: -80%;
     color: antiquewhite;
     left: 0;
     z-index: 2;
     transition: 1.1s;
 }
 .proj-card:hover .proj-text{
-    top: 80px;
+    top: 30px;
 
 }
 .proj-card:hover .proj-img{
@@ -65,81 +60,15 @@
 
 }
 
+.proj-map{
+    display: flex;
+    flex-direction: row;
+    
+    /* max-width: fit-content */
+    
+}
 
-
-
-
-
-/* .section-header{
-    margin-bottom: 5%;
-}
-.single-team{
-    position: relative;
-    overflow: hidden;
-    transition: all 0.3s ease;
-}
-.team-img{
-    position: relative;
-}
-.team-img:before{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 11;
-    transform: translateX(-100%);
-    transition: all 0.4s ease;
-    visibility: hidden;
-    content: '';
-    background: rgba(130, 133, 203, 0.9);
-    height: 100%;
-    width: 100%;
-}
-.single-team:hover .team-img:before{
-    visibility: visible;
-    transform: translateY(0%);
-}
-.proj-img{
-    width: 100%;
-    z-index: 10;
-    transition: 0.7s;
-}
-.single-team:hover img{
-    transform: scale(1.1);
-
-}
-.overlay-text{
-    position: absolute;
-    z-index: 15;
-    color: black;
-    top: 30%;
-    text-align: center;
-    padding-left: 30px;
-    padding-right: 30px;
-    opacity: 0;
-    transition: all 0.4s ease;
-    font-family: 'Courier New', Courier, monospace;
-}
-.single-team:hover .overlay-text{
-    opacity: 1;
-    visibility: visible;
-}
-.overlay-text h2{
-    text-transform: uppercase;
-    font-weight: 600;
-    transition: all 1s ease;
-    font-size: 30px;
-    margin: 5px 0 15px;
-    position: relative;
-    top: -22px;
-}
-.single-team:hover h2{
-    top: 0;
-}
-.overlay-text p{
-    position: relative;
-    bottom: -22px;
-    transition: all 1s ease;
-}
-.single-team:hover p{
-    bottom:0;
-} */
+.proj-box {
+    display: flex;
+    flex-direction: row;
+} 
